# roundtable

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
lib/: config.sh  core.selftest.sh  core.sh  install.sh  mcp.py
packaging/homebrew/: roundtable.rb
plugins/roundtable/.claude-plugin/: plugin.json
roundtable_cli/: __init__.py  __main__.py
skill/: SKILL.md
